WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165030
CrashTracer: [USER] com.apple.WebKit.WebContent at com.apple.WebCore: WebCore::ExtensionStyleSheets::pageUserSheet + 14
https://bugs.webkit.org/show_bug.cgi?id=165030
Summary
CrashTracer: [USER] com.apple.WebKit.WebContent at com.apple.WebCore: WebCore...
Antti Koivisto
Reported
2016-11-22 07:12:34 PST
We don't reset style scope properly if an element is moved to a different document adoptNode().
Attachments
patch
(5.90 KB, patch)
2016-11-22 07:20 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2016-11-22 07:20:38 PST
Created
attachment 295336
[details]
patch
Antti Koivisto
Comment 2
2016-11-22 07:22:04 PST
<
rdar://problem/28938216
>
WebKit Commit Bot
Comment 3
2016-11-22 12:13:49 PST
Comment on
attachment 295336
[details]
patch Clearing flags on attachment: 295336 Committed
r208967
: <
http://trac.webkit.org/changeset/208967
>
WebKit Commit Bot
Comment 4
2016-11-22 12:13:54 PST
All reviewed patches have been landed. Closing bug.
Antti Koivisto
Comment 5
2016-11-23 06:33:54 PST
***
Bug 164923
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug