CrashTracer: [USER] com.apple.WebKit.WebContent at com.apple.WebCore: WebCore::ExtensionStyleSheets::pageUserSheet + 14 https://bugs.webkit.org/show_bug.cgi?id=165030

Reviewed by Darin Adler.

Source/WebCore:

We failed to reset the style scope when an element was moved to a different document. This could lead to having dangling
document pointers in style scope and style resolver.

Test: fast/shadow-dom/shadow-host-move-to-different-document.html

* dom/ShadowRoot.cpp:
(WebCore::ShadowRoot::didMoveToNewDocument):

    Reset style scope.

* dom/ShadowRoot.h:
* style/StyleScope.cpp:
(WebCore::Style::Scope::resolver):

    Some more assertions.

* style/StyleScope.h:
(WebCore::Style::Scope::document):

LayoutTests:

* fast/shadow-dom/shadow-host-move-to-different-document-expected.html: Added.
* fast/shadow-dom/shadow-host-move-to-different-document.html: Added.


Canonical link: https://commits.webkit.org/182675@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208967 268f45cc-cd09-0410-ab3c-d52691b4dbfc